# coast-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
cluster/clariden/: coast_run_api_benchmark_single.slurm  coast_run_single_hf_benchmark.slurm
data_generation/: build_coast_eval_subset.py  build_coast_full_benchmark_results.py  build_coast_human_eval_packet.py  build_coast_human_valid_suite.py  build_coast_robustness_report.py  build_coast_speakervid_tier2.py  build_coast_standard_release.py  build_coast_tier3.py  build_coast_tier3_tasks.py  build_coast_vggsound_tier1.py  build_speakervid_collab_cue_rc2_human_packet.py  build_speakervid_collab_cue_rc2_tasks.py  build_wearvox_audio_to_audio_demo.py  build_wearvox_grounding_contrast_demo.py  build_wearvox_investor_demo.py  render_wearvox_demo_audio_outputs.py  run_coast_hf_benchmark.py  select_coast_task_suite.py
docs/: COAST_COLLABORATIVE_REFRAMING_REVIEW.md  COAST_COMPACT_V5_EVALUATION_INSTRUCTIONS.md  COAST_HUMAN_FEEDBACK_AUDIT_V2.md  COAST_TASK_REVIEW_GUIDE_RC1.md  COAST_TECHNICAL_EVALUATION_STANDARD.md  REPRODUCIBILITY_NOTES.md
examples/: README.md
examples/results/: coast_compact_v5_full_results.csv  coast_compact_v5_full_results.md
src/dynsalmon/: __init__.py  coast_grounding_eval.py  coast_grounding_tasks.py  coast_hf_benchmark.py  coast_speakervid.py  coast_tier3.py
